ajitj/kub/example2/myistiogateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: coreapp-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coreappvs
spec:
  hosts:
  - "*"
  gateways:
  - coreapp-gateway
  http:
  - match:
    - uri:
        prefix: /citiesview
    route:
    - destination:
        host: coremvc-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: coreapi-service
        port:
          number: 80
